[package]
name = "show-scraper"
version = "0.1.0"
authors = ["Alexander Johnson <alexx.johnson@sgmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
scraper = "0.11"
select = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
