[package]
name = "show-scraper"
version = "0.2.0"
authors = ["Xander Johnson <xander@metasyn.pw>"]
edition = "2021"
resolver = "1"

[dependencies]
rocket = "0.4.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.14"
select = "0.6"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
table-extract = "0.2"
